tests/error/modifier_errors/flags_triple_dagger.err
Error: Unitary constraint violation (at $FILE:13:8)
   | 
11 | def test(q: qubit) -> None:
12 |     with dagger, dagger, dagger:
13 |         foo(q)
   |         ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
